# bounded-predictive-machine-world-model-first

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
Source Documents/: 1. Core Vision and Thesis.md  10. Corrected Restart Implementation Plan.md  11. Initial Record Model for Restart.md  12. Non-LLM Methods and Future Tools.md  13. Next Chat Handoff.md  2. Corrected Architecture Overview.md  3. Lessons from v0.1 to v0.2.md  4. Signal Sources and Sensorium.md  5. World Model, Priors, and Body State.md  6. Prediction and Prediction Error.md  7. Evidence, Uncertainty, and Abstention.md  8. Memory and Model Revision.md  9. Action, Safety, and Boundaries.md
src/bpm_runtime/: body.py  prediction.py  priors.py  records.py  signals.py  world_model.py
tests/: test_body.py  test_prediction.py  test_priors.py  test_records.py  test_signals.py  test_world_model.py
